[package]
name = "oxideav-h265"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-h265"
authors = ["Mark Karpeles"]
description = "Pure-Rust H.265 / HEVC (ITU-T H.265 | ISO/IEC 23008-2) bitstream parser + decoder scaffold for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-h265"
keywords = ["multimedia", "video", "h265", "hevc", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.0"
oxideav-codec = "0.0"
