[package]
name = "oxideav-h265"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-h265"
authors = ["Mark Karpeles"]
description = "Pure-Rust H.265 / HEVC (ITU-T H.265 | ISO/IEC 23008-2) bitstream parser + decoder scaffold for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-h265"
keywords = ["multimedia", "video", "h265", "hevc", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"

[features]
# HEIF/HEIC still image + image sequence container support. Enables the
# `heif` module which walks the ISOBMFF meta hierarchy (ftyp / meta /
# hdlr / pitm / iinf / iloc / iref / iprp / ipco / ipma) and wires the
# primary item's HEVC elementary stream + hvcC parameter sets through
# the existing H.265 decoder. Scaffold-grade: the box walker is
# complete enough to locate the primary item's payload, but end-to-end
# decode of a real HEIC is gated on encoder-side fixtures.
default = []
heif = []
