[package]
name = "oxideav-h265"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-h265"
authors = ["Mark Karpeles"]
description = "Pure-Rust H.265 / HEVC (ITU-T H.265 | ISO/IEC 23008-2) bitstream parser + decoder scaffold for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-h265"
keywords = ["multimedia", "video", "h265", "hevc", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"

[dev-dependencies]
# Used by the HEIF fixture-corpus integration test (`tests/heif_corpus.rs`)
# to decode each fixture's `expected.png` oracle for byte-by-byte
# comparison with our `decode_primary` output. Behind the `heif` feature
# only — on a default build the test file is empty and the dep is
# unused-but-cheap.
oxideav-png = "0.1"
# Re-exported by the test for typed access to `VideoFrame` in the
# round-3+ bit-exact comparison helper. (`oxideav-h265` depends on
# `oxideav-core` as a regular dep already; the dev-dep entry lets
# integration tests name the type directly.)
oxideav-core = "0.1"

[features]
# HEIF/HEIC still image + image sequence container support. Enables the
# `heif` module which walks the ISOBMFF meta hierarchy (ftyp / meta /
# hdlr / pitm / iinf / iloc / iref / iprp / ipco / ipma) and wires the
# primary item's HEVC elementary stream + hvcC parameter sets through
# the existing H.265 decoder. Scaffold-grade: the box walker is
# complete enough to locate the primary item's payload, but end-to-end
# decode of a real HEIC is gated on encoder-side fixtures.
default = ["heif"]
heif = []
